<resources>
    <string name="app_name">MotorTherapy</string>

    <string name="input_email">Email</string>
    <string name="input_password">Password</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>

    <string name="menu_home">Home</string>
    <string name="menu_info">Info</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_web">WebSite</string>
    <string name="menu_exit">Exit</string>

    <string name="info_text">MotorTherapy corresponds to Project I for the course of Languages, Compilers and Interpreters (CE3104) by the Computer Engineering degree
        of the Technological Institute of Costa Rica. It consists of an implementation of a device that helps people in their gross motor therapies.</string>
    <string name="more_info">For more information visit: https://github.com/ce-itcr/MotorTherapy</string>


    <string name="forgot_password">Forgot your password?</string>
    <string name="have_account">Already have an account?</string>
    <string name="no_account">Don\'t have an account?</string>
</resources>
